log-processing: update unit test, add readme, exclude for nyc

--- a/src/log-processing/.nycrc
+++ b/src/log-processing/.nycrc
@@ -1,5 +1,6 @@
 {
   "extends": "@istanbuljs/nyc-config-typescript",
   "all": false,
-  "check-coverage": true
+  "check-coverage": true,
+  "exclude": ["**/shared/**"]
 }
