fix ci, add package_name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,4 +61,5 @@ workflows:
   log-processing:
     when: << pipeline.parameters.log-processing >>
     jobs:
-      - test
+      - test:
+          package_name: log-processing
