--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run: yarn install
       - save_cache:
           paths:
-            - node_modules
+            - ~/project/src/<< parameters.package_name >>/node_modules
           key: v1-dependencies-{{ checksum "./package.json" }}
       - run: yarn build
       - run: yarn test
