--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - ~/project
+            - project
 
   lint:
     executor: node
