--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            ./load-nvm.sh
+            ./.circleci/load-nvm.sh
             nvm install v12.18.1
             nvm alias default v12.18.1
 
