--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,9 +83,7 @@ jobs:
             export NVM_DIR="/opt/circleci/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
             nvm install v12.18.1 && nvm use v12.18.1 && nvm alias default v12.18.1
-            curl -o- -L https://yarnpkg.com/install.sh | bash
-            echo 'export PATH="$HOME/.yarn/bin:$HOME/.config/yarn/global/node_modules/.bin:$PATH"' >> $BASH_ENV
-            yarn test
+            npm run test
             
 workflows:
   version: 2
