--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -48,7 +48,7 @@
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
     "ts-check": "tsc -p ./tsconfig.json --noEmit",
-    "test": "yarn test:integration",
+    "test": "npm run test:integration",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts"
   }
 }
