--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -4,9 +4,6 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@types/request-ip": "^0.0.35",
-    "@types/rimraf": "^3.0.0",
-    "@types/shelljs": "^0.8.8",
     "@webalytic/ms-tools": "^0.0.5",
     "@webalytic/protorepo": "webalytic/protorepo#0.0.7",
     "awilix": "^4.2.6",
@@ -17,7 +14,6 @@
     "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
-    "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
     "uglify-js": "^3.10.1",
@@ -28,6 +24,9 @@
     "@types/chai": "^4.2.12",
     "@types/faker": "^4.1.12",
     "@types/mocha": "^7.0.2",
+    "@types/request-ip": "^0.0.35",
+    "@types/rimraf": "^3.0.0",
+    "@types/shelljs": "^0.8.8",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
@@ -36,18 +35,20 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
+    "supertest": "^4.0.2",
     "faker": "^4.1.0",
+    "grpc-tools": "^1.9.1",
+    "grpc_tools_node_protoc_ts": "^4.1.2",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.2"
+    "testcontainers": "^3.3.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
-    "test": "yarn test:integration",
-    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts",
     "lint": "eslint --ext .js,.ts ./",
-    "ts-check": "tsc -p ./tsconfig.json --noEmit"
+    "ts-check": "tsc -p ./tsconfig.json --noEmit",
+    "test": "npm run test:integration",
+    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts"
   }
 }
