--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,13 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "./package.json" }}
           - v1-dependencies-
+      - run: rm ../../package.json
+      - run: yarn generate-lock-entry >> yarn.lock
       - run: yarn install
       - save_cache:
           paths:
             - ~/project/src/<< parameters.package_name >>/node_modules
-            - ~/project/node_modules
+            - ~/.cache/yarn
           key: v1-dependencies-{{ checksum "./package.json" }}
       - run: yarn build
       - persist_to_workspace:
