--- a/deploy/docker-compose/.env
+++ b/deploy/docker-compose/.env
@@ -15,7 +15,6 @@ REDIS_HOST=redis
 REDIS_PASSWORD=auth
 
 PROCESSING_SHARDS=100
-PROCESSING_DELAY=100
 
 CUBEJS_DB_HOST=clickhouse
 CUBEJS_DB_PORT=8123
@@ -31,3 +30,6 @@ NATS_CLUSTER=webalytic
 DATA_STORAGE_HOST=data-storage
 
 API_GATEWAY_URL=http://api-gateway:3000
+
+GEOIP_HOST=geoip
+GEOIP_PORT=50051
