--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -47,7 +47,7 @@
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
-    "ts-check": "tsc -p ./tsconfig.json --noEmit",
+    "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:integration",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts"
   }
