--- a/src/log-collector/tsconfig.json
+++ b/src/log-collector/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "noImplicitAny": false,
     "baseUrl": "./src",
     "paths": {
@@ -17,6 +18,7 @@
     "test/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./node_modules/*"
   ]
 }
