--- a/src/log-processing/package.json
+++ b/src/log-processing/package.json
@@ -52,7 +52,7 @@
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
-    "ts-check": "tsc -p ./tsconfig.json --noEmit",
+    "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 ./src/**/*.test.ts",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts",
