--- a/src/log-processing/tsconfig.json
+++ b/src/log-processing/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": false,
+    "esModuleInterop": true,
     "baseUrl": "./src",
     "paths": {
       "@shared/*": [
