--- a/src/log-collector/package.json
+++ b/src/log-collector/package.json
@@ -39,15 +39,15 @@
     "faker": "^4.1.0",
     "grpc-tools": "^1.9.1",
     "grpc_tools_node_protoc_ts": "^4.1.2",
-    "mocha": "^8.0.1",
     "nyc": "^15.1.0",
+    "mocha": "^8.0.1",
     "testcontainers": "^3.3.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./src/index.ts",
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
-    "ts-check": "tsc -p ./tsconfig.json --noEmit",
+    "ts-check": "tsc --project ./tsconfig.json --noEmit",
     "test": "npm run test:integration",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 120000 -b ./test/index.ts"
   }
