--- a/src/api-gateway/tsconfig.json
+++ b/src/api-gateway/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "noImplicitAny": false,
     "baseUrl": "./src"
@@ -12,6 +13,7 @@
     "test/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./node_modules/*"
   ]
 }
