add infra and structure for new service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     "./src/log-collector",
     "./src/geoip",
     "./src/dashboard",
-    "./src/data-storage"
+    "./src/data-storage",
+    "./src/configuration"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
