--- a/src/configuration/package.json
+++ b/src/configuration/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@webalytic/ms-tools": "^0.0.10",
-    "@webalytic/protorepo": "webalytic/protorepo#0.2.1",
+    "@webalytic/protorepo": "webalytic/protorepo#0.2.3",
+    "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "google-protobuf": "^3.12.4",
     "grpc": "^1.24.3",
@@ -17,6 +18,7 @@
     "umzug": "^2.3.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
     "@types/google-protobuf": "^3.7.2",
     "@types/rimraf": "^3.0.0",
     "@types/shelljs": "^0.8.8",
@@ -36,6 +38,9 @@
     "build": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/proto.ts",
     "lint": "eslint --ext .js,.ts ./",
     "ts-check": "tsc -p ./tsconfig.json --noEmit",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 ./src/**/*.test.ts",
+    "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts",
     "migration": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./migrations",
     "migration:down": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./migrations down",
     "postinstall": "npm run build"
