--- a/src/configuration/package.json
+++ b/src/configuration/package.json
@@ -4,34 +4,47 @@
   "main": "./src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@types/mocha": "^8.0.2",
-    "@webalytic/ms-tools": "^0.0.10",
-    "@webalytic/protorepo": "webalytic/protorepo#0.2.3",
+    "@grpc/proto-loader": "^0.5.5",
+    "@webalytic/ms-tools": "^0.0.12",
+    "@webalytic/protorepo": "webalytic/protorepo#0.2.5",
+    "awilix": "^4.2.6",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
+    "fastest-validator": "^1.6.1",
     "google-protobuf": "^3.12.4",
     "grpc": "^1.24.3",
     "grpc-tools": "^1.9.1",
+    "moment": "^2.27.0",
     "rimraf": "^3.0.2",
+    "sequelize": "^6.3.4",
     "shelljs": "^0.8.4",
+    "testcontainers": "^3.3.1",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
-    "umzug": "^2.3.0"
+    "umzug": "^2.3.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/google-protobuf": "^3.7.2",
+    "@types/mocha": "^8.0.2",
     "@types/rimraf": "^3.0.0",
+    "@types/sequelize": "^4.28.9",
     "@types/shelljs": "^0.8.8",
     "@types/umzug": "^2.2.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import": "^2.22.0",
+    "faker": "^4.1.0",
     "grpc-tools": "^1.9.1",
     "grpc_tools_node_protoc_ts": "^4.1.2",
+    "mocha": "^8.0.1",
+    "nyc": "^15.1.0",
     "protobufjs": "^6.10.1"
   },
   "scripts": {
@@ -42,8 +55,9 @@
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 ./src/**/*.test.ts",
     "test:integration": "mocha -r ts-node/register/transpile-only -r tsconfig-paths/register --timeout 15000 -b ./test/index.ts",
-    "migration": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./migrations",
-    "migration:down": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./migrations down",
+    "migration": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/migration",
+    "migration:down": "ts-node --transpile-only -r tsconfig-paths/register --project ./tsconfig.json ./bin/migration down",
+    "coverage": "nyc npm run test:unit",
     "postinstall": "npm run build"
   }
 }
